<resources>
    <string name="app_name">GoodWarehouse</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="shop_num">1</string>
    <string name="shopAdd">+</string>
    <string name="shop_jian">-</string>
    <string name="tab_shop">商店</string>
    <string name="tab_share">分享</string>
    <string name="tab_person">个人</string>
    <string name="tab_mzg">杂志</string>
    <string name="tab_daren">达人</string>
    <string name="login_zhuce">登录注册</string>
    <string name="share_friend">分享给好友</string>
    <string name="exit_app">退出应用</string>
    <string name="scan_login">扫一扫</string>
    <string name="clear_memory">清除缓存</string>
    <string name="mzg_culture">#文化</string>
    <string name="mzg_host">圣诞节海报打赏, 拿走不谢</string>
    <string name="bottom_refresh">下拉可以刷新！</string>
    <string name="loading">正在加载...</string>
    <string name="title">良仓</string>
    <string name="information">生活美学指南</string>
    <string name="usered">info@iliangcang.com版权所有</string>
    <string name="add_cart">加入购物车</string>
    <string name="buy_directly">直接购买</string>
    <string name="goods_details">商品详情</string>
    <string name="sold_out">已售罄,即将到货</string>
    <string name="choose_good">选好了</string>
    <string name="good_delete">删除</string>
    <string name="good_settlement">去结算</string>
    <string name="good_total">合计</string>
    <string name="check_all">全选</string>
    <string name="good_cart">购物车</string>
    <string name="good_editor">编辑</string>
    <string name="weite">亲爱的写字台</string>
    <string name="lose">失物招领</string>
    <string name="price_good">$5500.00</string>
    <string name="prefossal">职业</string>
    <string name="fans">粉丝</string>
    <string name="contantion">关注</string>
    <string name="comment">推荐</string>
    <string name="like">喜欢</string>
    <string name="email_login">邮箱登录</string>
    <string name="tel_login">手机号登录</string>
    <string name="other_login">其他登录方式</string>
    <string name="input_word">请输入文字...</string>
    <string name="search_good">搜索良品</string>
    <string name="good_des">商品描述</string>
    <string name="product_des">产品介绍:</string>
    <string name="res_commant">推荐自:</string>
    <string name="house">良仓</string>
    <string name="brand_res">品牌介绍:</string>
    <string name="brand_name">品牌名</string>
    <string name="good_guide">购物指南</string>
    <string name="good_guide_res">购物指南内容</string>
</resources>
