<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="90dp"
    android:layout_height="40dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:gravity="center"
    android:layout_marginLeft="60dp"
    android:background="@drawable/selector_number_add_sub">
    <Button
        android:id="@+id/btn_sub"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_btn_style_white"
        android:textColor="@color/textColorGray"
        android:gravity="center"
        android:text="@string/shop_jian"/>

    <TextView
        android:id="@+id/etxt_num"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorGray"
        android:minWidth="30dp"
        android:text="@string/shop_num"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_btn_style_white"
        android:textColor="@color/textColorGray"
        android:gravity="center"
        android:text="@string/shopAdd"/>



</LinearLayout>