<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:orientation="vertical"
    android:padding="5dp"
    android:gravity="center">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/cateGoodIv"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/demo_people"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cateGoodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weite"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/textColorWrite"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cateGoodDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorGray"
            android:text="@string/lose"
            android:singleLine="true"
            android:padding="5dp"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cateNum"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="208"
                android:drawablePadding="4dp"
                android:drawableLeft="@mipmap/like_not_heart"
                android:textColor="@color/text_deep_blue"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/catePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_light_blue"
                android:text="@string/price_good"
                android:padding="5dp"
                android:layout_alignParentLeft="true"
                android:textSize="12sp"
               />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
